--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,67 +1,38 @@
 {
-	"version": "0.1.0",
-	// List of configurations. Add new configurations or edit existing ones.
-	"configurations": [
-		{
-			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "Launch",
-			// Type of configuration.
-			"type": "node",
-			// Workspace relative or absolute path to the program.
-			"program": "lib/index.js",
-			// Automatically stop program after launch.
-			"stopOnEntry": false,
-			// Command line arguments passed to the program.
-			"args": [],
-			// Workspace relative or absolute path to the working directory of the program being debugged. Default is the current workspace.
-			"cwd": ".",
-			// Workspace relative or absolute path to the runtime executable to be used. Default is the runtime executable on the PATH.
-			"runtimeExecutable": null,
-			// Optional arguments passed to the runtime executable.
-			"runtimeArgs": ["--nolazy"],
-			// Environment variables passed to the program.
-			"env": {
-				"NODE_ENV": "development"
-			},
-			// Use JavaScript source maps (if they exist).
-			"sourceMaps": true,
-			// If JavaScript source maps are enabled, the generated code is expected in this directory.
-			"outDir": "lib/"
-		},
+  "version": "0.1.0",
+  "configurations": [
     {
-			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "Test",
-			// Type of configuration.
-			"type": "node",
-			// Workspace relative or absolute path to the program.
-			"program": "node_modules/gulp-mocha/node_modules/mocha/bin/_mocha",
-			// Automatically stop program after launch.
-			"stopOnEntry": false,
-			// Command line arguments passed to the program.
-			"args": ["lib/tests/"],
-			// Workspace relative or absolute path to the working directory of the program being debugged. Default is the current workspace.
-			"cwd": ".",
-			// Workspace relative or absolute path to the runtime executable to be used. Default is the runtime executable on the PATH.
-			"runtimeExecutable": null,
-			// Optional arguments passed to the runtime executable.
-			"runtimeArgs": ["--nolazy"],
-			// Environment variables passed to the program.
-			"env": {
-				"NODE_ENV": "development"
-			},
-			// Use JavaScript source maps (if they exist).
-			"sourceMaps": true,
-			// If JavaScript source maps are enabled, the generated code is expected in this directory.
-			"outDir": "lib/"
-		},
-		{
-			"name": "Attach",
-			"type": "node",
-			// TCP/IP address. Default is "localhost".
-			"address": "localhost",
-			// Port to attach to.
-			"port": 5858,
-			"sourceMaps": false
-		}
-	]
+      "name": "Launch",
+      "request": "launch",
+      "type": "node",
+      "program": "out/src/index.js",
+      "runtimeArgs": [
+        "--nolazy"
+      ],
+      "sourceMaps": true,
+      "outDir": "out"
+    },
+    {
+      "name": "Test",
+      "request": "launch",
+      "type": "node",
+      "program": "node_modules/.bin/_mocha",
+      "args": [
+        "out/specs/"
+      ],
+      "runtimeArgs": [
+        "--nolazy"
+      ],
+      "sourceMaps": true,
+      "outDir": "out"
+    },
+    {
+      "name": "Attach",
+      "request": "attach",
+      "type": "node",
+      "port": 5858,
+      "sourceMaps": true,
+      "outDir": "out"
+    }
+  ]
 }
