--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "del": "2.0.2",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tsb": "^1.7.4",
     "gulp-tslint": "^3.1",
-    "gulp-typescript": "^2.9.2",
     "should": "^7.1.1",
     "source-map-support": "^0.3.3"
   },
