--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "moduleResolution": "node",
+    "declaration": false,
+    "inlineSourceMap": true,
+    
+    "outDir": "./out",
+
     "noImplicitAny": true,
-    "outDir": "../lib",
     "preserveConstEnums": true,
     "removeComments": true
   }
